[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Level3.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tilesets/Blocks.tres" type="TileSet" id=2]
[ext_resource path="res://Assets/Tilesets/Key.tres" type="TileSet" id=3]
[ext_resource path="res://Scenes/Key.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Teleporter.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=6]

[node name="Level3" type="Area2D"]
script = ExtResource( 1 )

[node name="PlayerSpawn" type="Position2D" parent="."]
position = Vector2( 304, 336 )

[node name="Level" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 196609, 26, 0, 196610, 31, 0, 196611, 31, 0, 196612, 27, 0, 196616, 26, 0, 196617, 31, 0, 196618, 27, 0, 196622, 26, 0, 196623, 31, 0, 196624, 31, 0, 196625, 27, 0, 262145, 30, 0, 262146, 37, 0, 262147, 37, 0, 262148, 30, 0, 262152, 30, 0, 262153, 38, 0, 262154, 30, 0, 262158, 30, 0, 262159, 37, 0, 262160, 37, 0, 262161, 30, 0, 327681, 28, 0, 327682, 31, 0, 327683, 31, 0, 327684, 29, 0, 327688, 30, 0, 327689, 37, 0, 327690, 30, 0, 327694, 28, 0, 327695, 31, 0, 327696, 31, 0, 327697, 29, 0, 393224, 30, 0, 393225, 37, 0, 393226, 30, 0, 458753, 26, 0, 458754, 31, 0, 458755, 31, 0, 458756, 27, 0, 458758, 26, 0, 458759, 31, 0, 458760, 29, 0, 458761, 37, 0, 458762, 28, 0, 458763, 31, 0, 458764, 27, 0, 458766, 26, 0, 458767, 31, 0, 458768, 31, 0, 458769, 27, 0, 524289, 30, 0, 524290, 37, 0, 524291, 37, 0, 524292, 30, 0, 524294, 30, 0, 524295, 37, 0, 524296, 37, 0, 524297, 37, 0, 524298, 37, 0, 524299, 37, 0, 524300, 30, 0, 524302, 30, 0, 524303, 37, 0, 524304, 37, 0, 524305, 30, 0, 589825, 28, 0, 589826, 31, 0, 589827, 31, 0, 589828, 29, 0, 589830, 30, 0, 589831, 37, 0, 589832, 37, 0, 589833, 37, 0, 589834, 37, 0, 589835, 37, 0, 589836, 30, 0, 589838, 28, 0, 589839, 31, 0, 589840, 31, 0, 589841, 29, 0, 655366, 30, 0, 655367, 37, 0, 655368, 37, 0, 655369, 37, 0, 655370, 37, 0, 655371, 37, 0, 655372, 30, 0, 720897, 26, 0, 720898, 31, 0, 720899, 31, 0, 720900, 27, 0, 720902, 30, 0, 720903, 37, 0, 720904, 37, 0, 720905, 37, 0, 720906, 37, 0, 720907, 37, 0, 720908, 30, 0, 720910, 26, 0, 720911, 31, 0, 720912, 31, 0, 720913, 27, 0, 786433, 30, 0, 786434, 37, 0, 786435, 37, 0, 786436, 30, 0, 786438, 30, 0, 786439, 37, 0, 786440, 37, 0, 786441, 37, 0, 786442, 37, 0, 786443, 37, 0, 786444, 30, 0, 786446, 30, 0, 786447, 37, 0, 786448, 37, 0, 786449, 30, 0, 851969, 28, 0, 851970, 31, 0, 851971, 31, 0, 851972, 29, 0, 851974, 28, 0, 851975, 31, 0, 851976, 31, 0, 851977, 31, 0, 851978, 31, 0, 851979, 31, 0, 851980, 29, 0, 851982, 28, 0, 851983, 31, 0, 851984, 31, 0, 851985, 29, 0, 2555959, 25, 0 )
__meta__ = {
"_edit_bone_": true
}

[node name="Purple_Block" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 720903, 536870916, 0, 720904, 536870916, 0, 786440, 536870916, 0 )

[node name="White_Block" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 524296, 6, 0, 589831, 6, 0, 589832, 6, 0 )

[node name="Blue_Block" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 458761, 1, 0 )

[node name="Green_Block" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 327689, 2, 0 )

[node name="Red_Block" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 393225, 536870917, 0 )

[node name="Purple_Key" parent="." instance=ExtResource( 4 )]
position = Vector2( 112, 143 )
sprite = "Purple"

[node name="White_Key" parent="." instance=ExtResource( 4 )]
position = Vector2( 528, 143 )
sprite = "White"

[node name="Blue_Key" parent="." instance=ExtResource( 4 )]
position = Vector2( 110, 399 )
sprite = "Blue"

[node name="Green_Key" parent="." instance=ExtResource( 4 )]
position = Vector2( 528, 399 )

[node name="Red_Key" parent="." instance=ExtResource( 4 )]
position = Vector2( 112, 272 )
sprite = "Red"

[node name="Yellow_Key" parent="." instance=ExtResource( 4 )]
position = Vector2( 530, 272 )
sprite = "Yellow"

[node name="Teleporters" type="Node" parent="."]
editor/display_folded = true

[node name="Teleporter" parent="Teleporters" instance=ExtResource( 5 )]
position = Vector2( 240, 336 )
teleport = Vector2( 530, 143 )

[node name="Teleporter2" parent="Teleporters" instance=ExtResource( 5 )]
position = Vector2( 368, 336 )
teleport = Vector2( 530, 272 )

[node name="Teleporter3" parent="Teleporters" instance=ExtResource( 5 )]
position = Vector2( 368, 272 )
teleport = Vector2( 112, 272 )

[node name="Teleporter4" parent="Teleporters" instance=ExtResource( 5 )]
position = Vector2( 368, 400 )
teleport = Vector2( 110, 399 )

[node name="Teleporter5" parent="Teleporters" instance=ExtResource( 5 )]
position = Vector2( 240, 272 )
teleport = Vector2( 528, 399 )

[node name="Teleporter6" parent="Teleporters" instance=ExtResource( 5 )]
position = Vector2( 240, 400 )
teleport = Vector2( 112, 143 )

[node name="Start_Teleport" parent="Teleporters" instance=ExtResource( 5 )]
position = Vector2( 496, 144 )
teleport = Vector2( 304, 336 )

[node name="Start_Teleport2" parent="Teleporters" instance=ExtResource( 5 )]
position = Vector2( 80, 144 )
teleport = Vector2( 304, 336 )

[node name="Start_Teleport3" parent="Teleporters" instance=ExtResource( 5 )]
position = Vector2( 80, 272 )
teleport = Vector2( 304, 336 )

[node name="Start_Teleport4" parent="Teleporters" instance=ExtResource( 5 )]
position = Vector2( 496, 272 )
teleport = Vector2( 304, 336 )

[node name="Start_Teleport5" parent="Teleporters" instance=ExtResource( 5 )]
position = Vector2( 496, 400 )
teleport = Vector2( 304, 336 )

[node name="Start_Teleport6" parent="Teleporters" instance=ExtResource( 5 )]
position = Vector2( 80, 400 )
teleport = Vector2( 304, 336 )

[node name="Player" parent="." instance=ExtResource( 6 )]
[connection signal="Unlock" from="Purple_Key" to="." method="_on_Purple_Key_Unlock"]
[connection signal="Unlock" from="White_Key" to="." method="_on_White_Key_Unlock"]
[connection signal="Unlock" from="Blue_Key" to="." method="_on_Blue_Key_Unlock"]
[connection signal="Unlock" from="Green_Key" to="." method="_on_Green_Key_Unlock"]
[connection signal="Unlock" from="Red_Key" to="." method="_on_Red_Key_Unlock"]
